Fixing min helper on iOS

--- a/src/cdn/elements/tables.css
+++ b/src/cdn/elements/tables.css
@@ -13,7 +13,6 @@ table :is(thead, tbody, tfoot, tr, th, td) {
 
 :is(th, td) {
   inline-size: auto;
-  max-inline-size: 1rem;
   text-align: inherit;
   padding: 0.5rem;
 }
@@ -60,7 +59,6 @@ tfoot th.fixed {
 }
 
 :is(td, th).min {
-  inline-size: 0;
-  max-inline-size: 0%;
+  inline-size: 0.1%;
   white-space: nowrap;
 }
